--- a/index.html
+++ b/index.html
@@ -2,25 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Games Hub</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Mini Games Hub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>🎮 My Games Hub</h1>
+    <h1>🎮 Mini Games Hub</h1>
     <p>Play simple browser games!</p>
   </header>
 
   <main>
     <div class="game-list">
       <div class="game-card" onclick="launchGame('ticTacToe')">
-        <h2>Tic-Tac-Toe</h2>
+        <h2>Tic Tac Toe</h2>
         <p>Classic 2-player game</p>
-      </div>
-      <div class="game-card" onclick="launchGame('memoryGame')">
-        <h2>Memory Game</h2>
-        <p>Flip and match cards</p>
       </div>
     </div>
 
@@ -28,9 +23,9 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 My Games Hub</p>
+    <p>&copy; 2025 Mini Games Hub</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
