--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <h2>Memory Game</h2>
         <p>Flip and match cards</p>
       </a>
+      <a class="game-card" href="games/shooter.html">
+        <h2>Shooting Game</h2>
+        <p>Aim and shoot targets</p>
+      </a>
+
     </div>
   </main>
 
