--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <h2>Shooting Game</h2>
         <p>Aim and shoot targets</p>
       </a>
+      <a class="game-card" href="games/airplane.html">
+        <h2>Airplane Dodger</h2>
+        <p>Dodge falling obstacles!</p>
+      </a>
+
 
     </div>
   </main>
