--- a/games/airplane.html
+++ b/games/airplane.html
@@ -9,7 +9,7 @@
   <h1>✈️ Airplane Dodger</h1>
   <p>Use ← → arrows to move</p>
   <div id="game-area">
-    <div id="player"></div>
+    <div id="player">✈️</div>
   </div>
   <p>Score: <span id="score">0</span></p>
 
