--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   </main>
 
   <footer>
+    <a href="about.html" class="game-card">
+      <h2>About</h2>
+      <p>Learn more about this hub</p>
+    </a>
+
     <p>&copy; 2025 My Games Hub</p>
   </footer>
 </body>
