--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
   </main>
 
   <footer>
-    <a href="about.html" class="game-card">
-      <h2>About</h2>
-      <p>Learn more about this hub</p>
+    <a class="game-card" href="games/parkour.html">
+      <h2>Parkour Runner</h2>
+      <p>Jump over obstacles!</p>
     </a>
 
     <p>&copy; 2025 My Games Hub</p>
   </footer>
+  <a href="about.html" class="game-card">
+      <h2>About</h2>
+      <p>Learn more about this hub</p>
+    </a>
 </body>
 </html>
