--- a/games/parkour.html
+++ b/games/parkour.html
@@ -1,163 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Parkour Runner</title>
+  <meta charset="UTF-8">
+  <title>Parkour Game</title>
   <style>
-    /* ===== CSS STYLES ===== */
-    body {
-      margin: 0;
-      overflow: hidden;
-      background: #111;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    h1 {
-      text-align: center;
-      margin: 20px 0;
-    }
-
     canvas {
       display: block;
       margin: 0 auto;
-      background: #222;
-      border: 2px solid #555;
+      background: #000;
     }
   </style>
 </head>
 <body>
-  <h1>🏃 Parkour Runner</h1>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
 
   <script>
-    // ===== JAVASCRIPT GAME CODE =====
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
-    const ctx = canvas.getContext('2d');
     const backgroundLayers = [
-    {
-      x: 0,
-      speed: 0.5,
-      color: '#1a1a2e', // Far background
-      height: canvas.height
-    },
-    {
-      x: 0,
-      speed: 1.5,
-      color: '#2f3e46', // Near background
-      height: canvas.height * 0.6
-    }
-  ];
+      { x: 0, speed: 0.5, color: '#1a1a2e', height: canvas.height },
+      { x: 0, speed: 1.5, color: '#2f3e46', height: canvas.height * 0.6 }
+    ];
 
-    let obstacles = [];
-    let frame = 0;
-    let score = 0;
-    let gameOver = false;
+    const player = {
+      x: 50,
+      y: 300,
+      width: 40,
+      height: 40,
+      dy: 0,
+      gravity: 0.6,
+      jumpPower: -18,
+      jumpCount: 0,
+      maxJumps: 2
+    };
 
-    // Jump on spacebar
-    document.addEventListener('keydown', e => {
-      if (e.code === 'Space' && player.jumpCount < player.maxJumps && !gameOver) {
-        player.dy = player.jumpPower;
-        player.jumpCount++;
-      } else if (gameOver && e.code === 'Enter') {
-        resetGame();
-      }
-    });
+    function drawBackground() {
+      backgroundLayers.forEach(layer => {
+        layer.x -= layer.speed;
 
-    function drawPlayer() {
-      ctx.fillStyle = '#4caf50';
-      ctx.fillRect(player.x, player.y, player.width, player.height);
-    }
+        if (layer.x <= -canvas.width) {
+          layer.x = 0;
+        }
 
-    function drawObstacle(ob) {
-      ctx.fillStyle = '#f44336';
-      ctx.fillRect(ob.x, ob.y, ob.width, ob.height);
-    }
-
-    function updateObstacles() {
-  if (frame % 90 === 0) {
-    const height = 100 + Math.random() * 100; // Taller obstacles
-    obstacles.push({
-      x: canvas.width,
-      y: canvas.height - height,
-      width: 30,
-      height: height
-    });
-  }
-
-  obstacles.forEach(ob => ob.x -= 5);
-  obstacles = obstacles.filter(ob => ob.x + ob.width > 0);
-}
-
-    function checkCollision(a, b) {
-      return (
-        a.x < b.x + b.width &&
-        a.x + a.width > b.x &&
-        a.y < b.y + b.height &&
-        a.y + a.height > b.y
-      );
+        ctx.fillStyle = layer.color;
+        ctx.fillRect(layer.x, canvas.height - layer.height, canvas.width, layer.height);
+        ctx.fillRect(layer.x + canvas.width, canvas.height - layer.height, canvas.width, layer.height);
+      });
     }
 
     function update() {
-      if (gameOver) return;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawBackground();
 
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // Player physics
+      // Gravity
       player.dy += player.gravity;
       player.y += player.dy;
 
+      // Ground check
       if (player.y + player.height >= canvas.height) {
         player.y = canvas.height - player.height;
         player.dy = 0;
-        player.jumpCount = 0; // Reset jumps
-      }
-      drawPlayer();
-
-      // Obstacles
-      updateObstacles();
-
-      for (let ob of obstacles) {
-        drawObstacle(ob);
-        if (checkCollision(player, ob)) {
-          gameOver = true;
-        }
+        player.jumpCount = 0;
       }
 
-      // Score
-      score++;
-      ctx.fillStyle = '#fff';
-      ctx.font = '20px Arial';
-      ctx.fillText(`Score: ${score}`, 10, 30);
-
-      if (gameOver) {
-        ctx.fillStyle = 'red';
-        ctx.font = '40px Arial';
-        ctx.fillText('GAME OVER', canvas.width / 2 - 120, canvas.height / 2);
-        ctx.font = '20px Arial';
-        ctx.fillText('Press ENTER to restart', canvas.width / 2 - 100, canvas.height / 2 + 40);
-      } else {
-        frame++;
-        requestAnimationFrame(update);
-      }
+      // Draw player
+      ctx.fillStyle = 'lime';
+      ctx.fillRect(player.x, player.y, player.width, player.height);
     }
 
-    function resetGame() {
-      obstacles = [];
-      frame = 0;
-      score = 0;
-      gameOver = false;
-      player.y = 300;
-      player.dy = 0;
-      player.onGround = true;
-      update();
-    }
+    document.addEventListener('keydown', e => {
+      if (e.code === 'Space' && player.jumpCount < player.maxJumps) {
+        player.dy = player.jumpPower;
+        player.jumpCount++;
+      }
+    });
 
-    update();
+    setInterval(update, 1000 / 60);
   </script>
 </body>
 </html>
