--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       <h2>Parkour Runner</h2>
       <p>Jump over obstacles!</p>
     </a>
+    <a class="game-card" href="games/rubik.html">
+      <h2>3D Rubik's Cube</h2>
+      <p>Rotate and auto-solve!</p>
+    </a>
 
     <p>&copy; 2025 My Games Hub</p>
   </footer>
